Adding two more project

--- a/project-list.json
+++ b/project-list.json
@@ -21,13 +21,31 @@
         "id":3,
         "title":"Coffe house",
         "description":"Coffe house manu with react , tailwind and framer motion a challege from devchalleges   ",
-        "link":"https://coffee-shop-ts.netlify.app/",
-        "github":"https://github.com/NatanPro2016/coffee-shop",
+        "link":"https://react-game-ts.netlify.app/",
+        "github":"https://github.com/NatanPro2016/game",
         "img":"/project-3.png"
 
     },
     {
         "id":4,
+        "title":"Mintin",
+        "description":"Developed with pure HTML, CSS, and JavaScript, featuring parallax scroll animation.",
+        "link":"https://mntn-hicking-guide.netlify.app/",
+        "github":"https://github.com/NatanPro2016/mntn",
+        "img":"/project-4.png"
+
+    },
+    {
+        "id":5,
+        "title":"React Game",
+        "description":" Built with React, this application lets you play a fun and interactive memory game.",
+        "link":"https://coffee-shop-ts.netlify.app/",
+        "github":"https://github.com/NatanPro2016/coffee-shop",
+        "img":"/project-5.png"
+
+    },
+    {
+        "id":6,
         "title":"20+ projects",
         "description":"you can find other projects in my git hub",
         "link":"https://github.com/NatanPro2016/",
