ching projects picture

--- a/project-list.json
+++ b/project-list.json
@@ -50,7 +50,7 @@
         "description":"You can find other projects in my git-hub",
         "link":"https://github.com/NatanPro2016/",
         "github":"https://github.com/NatanPro2016/",
-        "img":"/projects.jpg"
+        "img":"/projects.png"
 
     }
 
